MTB-16 Fixed text-align of blogs post caption, margin of logo, removed !important for blogpost header.

--- a/styles/global.css
+++ b/styles/global.css
@@ -36,7 +36,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
-  margin: 30px;
+  margin-left: 30px;
   text-align: center;
 }
 .logo,
